samples/_failures_safe/1761250571_de43c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e638c7ac.c: In function ‘main’:
./samples/SAFE/__tmp_e638c7ac.c:196:9: error: expected declaration or statement at end of input
  196 |         input[len - 1] = '\0';
      |         ^~~~~
./samples/SAFE/__tmp_e638c7ac.c:196:9: error: expected declaration or statement at end of input
